checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000235417.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:TYPO_SPELLING: 'fo' may be misspelled - perhaps 'of'?
#19: 
Subject: [PATCH] xen: compilation fix fo xen CPU hotplugging.
                                      ^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#34: 
> In file included from /linux-2.6/drivers/xen/cpu_hotplug.c:5:

WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#35: 
> /linux-2.6/include/asm-x86/xen/hypervisor.h:44:22: error: asm/desc.h: No such file or directory

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#38: 
>                  from /linux-2.6/drivers/xen/cpu_hotplug.c:5:

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#41: 
> /linux-2.6/drivers/xen/cpu_hotplug.c:81: error: implicit declaration of function 'is_running_on_xen'

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000235417.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 5 warnings, 0 checks, 16 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000235417.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
